# FastNewsAPI

./: .env  FastNewsAPI.mhtml  README.md  pyproject.toml
fastnewsapi/: main.py
